--- a/protocol_test.ipynb
+++ b/protocol_test.ipynb
@@ -10,129 +10,8 @@
     "import numpy as np\n",
     "import cv2\n",
     "from PIL import Image\n",
-    "from requests_toolbelt import MultipartEncoder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 177,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "import numpy as np\n",
-    "import cv2\n",
-    "from PIL import Image\n",
     "from requests_toolbelt import MultipartEncoder\n",
-    "\n",
-    "def login_and_create_session(url=\"https://api.polyground.info/v1/auth/login\", id=\"admin\", pw=\"admin1234\"):\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    사용자 ID와 비밀번호를 이용해 로그인하고, 반환된 토큰과 쿠키를 세션 헤더에 저장.\n",
-    "\n",
-    "    Args:\n",
-    "    - url (str): 로그인 API의 URL 주소\n",
-    "    - id (str): 사용자 ID\n",
-    "    - pw (str): 사용자 비밀번호\n",
-    "\n",
-    "    Returns:\n",
-    "    - session (requests.Session): 인증 정보가 포함된 세션 객체\n",
-    "    \"\"\"\n",
-    "    session = requests.Session()\n",
-    "    data = {\n",
-    "        \"loginId\": id,\n",
-    "        \"password\": pw,\n",
-    "        \"authType\": \"POLYGROUND\"\n",
-    "    }\n",
-    "    response = session.post(url, json=data)\n",
-    "    \n",
-    "    response.raise_for_status()\n",
-    "    \n",
-    "    token = response.json().get(\"token\")\n",
-    "    cookies = response.cookies\n",
-    "    cookie_header = '; '.join([f\"{key}={value}\" for key, value in cookies.items()])\n",
-    "\n",
-    "    session.headers.update({'Authorization': f'Bearer {token}', 'Cookie': cookie_header})\n",
-    "    print(\"Successfully logged in\")\n",
-    "        \n",
-    "    return session\n",
-    "\n",
-    "def reissue(session, url=\"https://api.polyground.info/v1/auth/reissue\"):\n",
-    "    \"\"\"\n",
-    "    세션으로 토큰 재발급 요청.\n",
-    "    새로운 토큰으로 세션의 인증 헤더를 업데이트. (기존 토큰 갱신)\n",
-    "\n",
-    "    Args:\n",
-    "    - session (requests.Session): 현재 유효한 세션 객체\n",
-    "    - url (str): 토큰 재발급 API의 URL 주소\n",
-    "\n",
-    "    Returns:\n",
-    "    - session (requests.Session): 업데이트된 세션 객체\n",
-    "    \"\"\"\n",
-    "    res = session.patch(url)\n",
-    "    res.raise_for_status()\n",
-    "    token = res.json().get(\"token\")\n",
-    "    session.headers.update({'Authorization': f'Bearer {token}'})\n",
-    "    return session\n",
-    "\n",
-    "\n",
-    "def get_resource_content_public(session, resource_id, url=\"https://api.play.polyground.ai/v1/resource/public\"):\n",
-    "    \"\"\"\n",
-    "    public resource 에 ID를 통해 파일을 바이너리 형태로 받음.\n",
-    "\n",
-    "    Args:\n",
-    "    - session (requests.Session): 인증 정보가 포함된 세션 객체\n",
-    "    - resource_id (str): 고유 ID\n",
-    "    - url (str): public resource API의 URL 주소\n",
-    "\n",
-    "    Returns:\n",
-    "    - content (bytes): 파일의 바이너리 데이터\n",
-    "    \"\"\"\n",
-    "    resource_url = f\"{url}/{resource_id}\"\n",
-    "    res = session.get(resource_url)\n",
-    "    res.raise_for_status()\n",
-    "    return res.content\n",
-    "\n",
-    "\n",
-    "def read_image(content):\n",
-    "    \"\"\"\n",
-    "    바이너리 형태의 이미지 데이터를 NumPy 배열로 변환하여 이미지로 읽음.\n",
-    "\n",
-    "    Args:\n",
-    "    - content (bytes): 이미지 파일의 바이너리 데이터\n",
-    "\n",
-    "    Returns:\n",
-    "    - img (numpy.ndarray): 변환된 이미지 데이터\n",
-    "    \"\"\"\n",
-    "    nparr = np.frombuffer(content, np.uint8)\n",
-    "    img = cv2.imdecode(nparr, cv2.IMREAD_COLOR)\n",
-    "    return img\n",
-    "\n",
-    "\n",
-    "def upload_resource_public(session, name, file_buffer, mime_type=\"image/jpeg\", url=\"https://api.play.polyground.ai/v1/resource/public\"):\n",
-    "    \"\"\"\n",
-    "    파일을 멀티파트 형식으로 서버에 업로드.\n",
-    "    파일의 이름, 데이터, 타입을 이용하여 멀티파트 요청을 구성하고 전송.\n",
-    "\n",
-    "    Args:\n",
-    "    - session (requests.Session): 인증 정보가 포함된 세션 객체\n",
-    "    - name (str): 업로드할 파일의 이름\n",
-    "    - file_buffer (bytes): 파일 데이터\n",
-    "    - mime_type (str): 파일의 MIME 타입 (기본값은 \"image/jpeg\")\n",
-    "    - url (str): 파일 업로드 API의 URL 주소\n",
-    "\n",
-    "    Returns:\n",
-    "    - res (requests.Response): 요청 결과를 담은 응답 객체\n",
-    "    \"\"\"\n",
-    "    m = MultipartEncoder(\n",
-    "        fields={'file': (name, file_buffer, mime_type)}\n",
-    "    )\n",
-    "    headers = {\n",
-    "        'Accept': 'application/json',\n",
-    "        'Content-Type': m.content_type\n",
-    "    }\n",
-    "    res = session.post(url, data=m, headers=headers)\n",
-    "    return res"
+    "from session_toolkit import *"
    ]
   },
   {
@@ -275,164 +154,6 @@
    ],
    "source": [
     "res.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [403]>"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 278,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<MultipartEncoder: {'file': ('test.jpg', <_io.BufferedReader name='test.jpg'>, 'image/jpeg')}>"
-      ]
-     },
-     "execution_count": 278,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ME"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 273,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'multipart/form-data; boundary=44f9f3bc54bc4568b5a8c40b5a2cd16d'"
-      ]
-     },
-     "execution_count": 273,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ME.content_type"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 276,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [403]>"
-      ]
-     },
-     "execution_count": 276,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 248,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'User-Agent': 'python-requests/2.31.0', 'Accept-Encoding': 'gzip, deflate', 'Accept': '*/*', 'Connection': 'keep-alive', 'Authorization': 'Bearer eyJhbGciOiJIUzUxMiJ9.eyJzdWIiOiJ1c2VyIiwiaXNzIjoicG9seWdyb3VuZC5kZXYiLCJpYXQiOjE3MTY1MzQ2MTksImV4cCI6MTcxNjUzODIxOSwiaWQiOjE3OSwibmFtZSI6ImFkbWluIiwicm9sZSI6IkFETUlOIiwiYXV0aF90eXBlIjoiUE9MWUdST1VORCJ9.uAPairg_ief1GSOkHmk6HH5kBbq0IYiB32TguA40-1wZ3SRDDcS7rVD-Jt4HCmkjWBrSoIclrJJqRSpU53rUsw'}"
-      ]
-     },
-     "execution_count": 248,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "session.headers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "EncoderField = {\"file\": (os.path.basename(path), open(path, \"rb\"), FileType)}\n",
-    "ME = MultipartEncoder(fields=EncoderField)\n",
-    "    _header = header.copy()\n",
-    "    _header[\"Content-Type\"] = ME.content_type\n",
-    "    r = requests.post(url= BASE_URL + VERSION + \"resource/public\", headers=_header, data=ME)\n",
-    "    result = {\"Response\":r}\n",
-    "    if r.ok:\n",
-    "        r_json = r.json()\n",
-    "        result[\"Source_ID\"] = r_json['id']\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 243,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [403]>"
-      ]
-     },
-     "execution_count": 243,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 244,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'file': ('test.jpg', <_io.BufferedReader name='test.jpg'>, 'image/jpeg')}"
-      ]
-     },
-     "execution_count": 244,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "files"
    ]
   }
  ],
